LLM4Config/assets/wiremind_wiremind-istio.yaml
---
# Source: wiremind-istio/templates/prometheus-istio/prometheus-istio-thanos-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-istio-thanos
  namespace: default
  labels:
    app: prometheus-istio-thanos
spec:
  type: ClusterIP
  ports:
    - name: grpc
      protocol: TCP
      port: 10901
      targetPort: grpc
    - name: http
      protocol: TCP
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-istio
---
# Source: wiremind-istio/templates/istio/istio-envoyfilter-listener-timeout-tcp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: listener-timeout-tcp
  labels:
    helm.sh/chart: wiremind-istio-2.5.0
    app.kubernetes.io/name: wiremind-istio
    app.kubernetes.io/instance: my-wiremind-istio
    app.kubernetes.io/managed-by: Helm
spec:
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.tcp_proxy
      patch:
        operation: MERGE
        value:
          name: envoy.filters.network.tcp_proxy
          typed_config:
            '@type': >-
              type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            idle_timeout: 24h
    - applyTo: NETWORK_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.tcp_proxy
      patch:
        operation: MERGE
        value:
          name: envoy.filters.network.tcp_proxy
          typed_config:
            '@type': >-
              type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            idle_timeout: 24h
---
# Source: wiremind-istio/templates/istio/gateway-expose-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cross-network-gateway
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"
